fixed formulas having line wrap issues

--- a/FlashcardSite/style.css
+++ b/FlashcardSite/style.css
@@ -10,7 +10,7 @@
 
 .flashcard {
     width: 20%;
-    height: 40%;
+    height: 100px;
     
     width:300px;
     height:100px;
